--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -99,7 +99,7 @@ bazinga_faker:
     orm: doctrine
     locale: fr_FR
     entities:
-        AppBundle\Entity\Rayonnage:
-            number: 25
-        AppBundle\Entity\Serie:
-            number: 15
+        AppBundle\Entity\Conservation:
+            number: 10
+        #AppBundle\Entity\Serie:
+        #    number: 15
